wip: fixing spacing

--- a/src/features/homepage/_homepage-hero.scss
+++ b/src/features/homepage/_homepage-hero.scss
@@ -17,6 +17,7 @@ $hc-hero-title-mbottom: v('space-lg');
   }
 
   &-row {
+    width: 100%;
     h1 {
       font-weight: $font-weight-light;
       margin-top: 0;
