--- a/src/features/homepage/_homepage-trending.scss
+++ b/src/features/homepage/_homepage-trending.scss
@@ -41,13 +41,11 @@ $hc-pinned-m-bottom: v('font-size-base');
   .grid {
     grid-template-columns: 1fr;
     grid-gap: var(--grid-gap);
-    @include media-breakpoint-between('md', 'lg',$grid-breakpoints) {
-      grid-template-columns: 1fr 50%;
-      grid-gap: var(--grid-gap);
+    @include media-breakpoint-between('md', 'xlg',$grid-breakpoints) {
+      grid-template-columns: 1fr 1fr;
     }
     @include media-breakpoint-up('lg',$grid-breakpoints) {
-      grid-template-columns: 1fr 60%;
-      grid-gap: var(--grid-gap-lg);
+      grid-template-columns: 30rem 1fr;
     }
   }
 }
