--- a/src/variables/_dimensions.scss
+++ b/src/variables/_dimensions.scss
@@ -11,7 +11,7 @@ $ipy-lg: var(--space-lg);
 
 // $input-height: calc(#{$input-line-height * 1rem} + #{$input-padding-y * 2} + #{$input-height-border});
 // $input-height-sm: calc(#{$input-line-height-sm * 1rem} + #{$input-btn-padding-y-sm * 2} + #{$input-height-border});
-// $input-height-lg: calc(#{$input-line-height-lg * 1rem} + #{$input-btn-padding-y-lg * 2} + #{$input-height-border});
+$input-height-lg: calc(1.5 * 1rem + (var(--space-sm) * 2) + 0.0625rem);
 
 $container-max-widths: (
   // lg: 1240px,
