--- a/src/variables/_spacing.scss
+++ b/src/variables/_spacing.scss
@@ -17,8 +17,14 @@
 
   --card-padding: 1.5rem 2.25rem;
 
-  --grid-gap-lg: var(--space-xxl);
-  --grid-gap: var(--space-lg);
+  --grid-gap: var(--space-sm);
+
+  @include media-breakpoint-between('md', 'lg', $grid-breakpoints) {
+    --grid-gap: var(--space-md);
+  }
+  @include media-breakpoint-up('xl', $grid-breakpoints) {
+    --grid-gap: var(--space-xxl);
+  }
 }
 
 // Navbar
